@@ -22,12 +22,13 @@ Decoders:
  * HD dvb subtitles - Display Definition Segment support
  * PGS subtitles for Blu-Ray
  * Invmem module improvements
- * Support for Atrac1 codec
+ * Support for Atrac1 audio codec
  * Support for SSE3 and SSE4 capabilities
+ * Multiple improvements for subtitles styles .SRT and .SSA
  * Support for DxVA2 for H.264 decoding on GPU on Windows Vista and 7
  * Support for VAAPI for H.264 decoding on GPU on GNU/Linux
- * Multiple improvements for subtitles styles .SRT and .SSA
  * Audio/Video decoder using OpenMAX IL components
+ * Support for Indeo5 video codec
 
 Demuxers:
  * Support for ADPCM in .flv streams
